--- a/public/index.css
+++ b/public/index.css
@@ -126,12 +126,12 @@ input[type="checkbox"] {
 }
 
 /* Apply the variables to elements */
-.nav-link {
-  color: var(--link-color);
+.navbar-nav .nav-link {
+  color: var(--link-color) !important;
 }
 
-.nav-link:hover {
-  color: var(--link-hover-color);
+.navbar-nav .nav-link:hover {
+  color: var(--link-hover-color) !important;
 }
 
 .btn-info {
@@ -143,15 +143,15 @@ input[type="checkbox"] {
   background-color: var(--button-hover-bg-color);
 }
 
-.footer {
-  background-color: var(--footer-bg-color);
-  color: var(--footer-text-color);
+.footer .p-3 {
+  background-color: var(--footer-bg-color) !important;
+  color: var(--footer-text-color) !important;
 }
 
 .footer a {
-  color: var(--link-hover-color);
+  color: var(--link-hover-color) !important;
 }
 
 .footer a:hover {
-  color: #bdbdbd;
+  color: #bdbdbd !important;
 }
